# BERT-SentimentAnalysis

./: README.md  pyproject.toml
src/: bert.py  main.py  spark.py  utils.py
