[tool.poetry]
name = "bert"
version = "0.1.0"
description = ""
authors = ["Gabriel Ganzer <gabriel.ganzer@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sparknlp = "^1.0.0"
pyspark = "^3.4.1"
loguru = "^0.7.1"
pandas = "1.5.3"
scikit-learn = "^1.3.0"
torch = ">=2.0.0, !=2.0.1"
transformers = "^4.33.0"
emoji = "^2.8.0"
bs4 = "^0.0.1"
datasets = "^2.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
